@@ -1,132 +1,132 @@
 #**********************************************************
 #* config keywords definition
-#* $Id: qconf.x,v 1.20 2004/06/22 08:28:30 sisoft Exp $
+#* $Id: qconf.x,v 1.21 2004/06/22 14:26:21 sisoft Exp $
 #**********************************************************
-address,C_ADDRL,falist_t *,1,NULL
-aftermail,C_STR,char *,0,NULL
-aftersession,C_STR,char *,0,NULL
-alwayskillfiles,C_YESNO,int,0,"no"
-alwaysoverwrite,C_STRL,slist_t *,0,NULL
-asooutbound,C_PATH,char *,2,NULL
-autohold,C_STRL,slist_t *,0,NULL
-autoskip,C_STRL,slist_t *,0,NULL
-autosuspend,C_STRL,slist_t *,0,NULL
-autoticskip,C_YESNO,int,0,"no"
-binkpopt,C_STR,char *,0,"MB"
-bsooutbound,C_PATH,char *,2,NULL
-callonflavors,C_STR,char *,0,"NDCIR"
-cancall,C_STR,char *,0,"CM"
-chathallostr,C_STR,char *,0,"\n * Hello %s!\n"
-chatlog,C_PATH,char *,0,NULL
-chatlognetmail,C_YESNO,int,0,"no"
-chattoemail,C_STR,char *,0,NULL
-clearundial,C_INT,int,0,"0"
-defboxflv,C_STR,char *,0,"H"
-defperm,C_OCT,int,0,"644"
-dialdelay,C_INT,int,0,"60"
-dialdelta,C_INT,int,0,"0"
-dialprefix,C_STR,char *,0,"ATD"
-dialsuffix,C_STR,char *,0,"|"
-dirperm,C_OCT,int,0,"755"
-domain,C_STR,char *,0,"fidonet.org"
-emsifreqtime,C_STR,char *,0,NULL
-emsilog,C_PATH,char *,0,NULL
-estimatedtime,C_YESNO,int,0,"no"
-extrp,C_STR,char *,0,NULL
-failpolls,C_YESNO,int,0,"yes"
-fails_hold_div,C_INT,int,0,"0"
-fails_hold_time,C_INT,int,0,"0"
-filebox,C_ADRSTRL,faslist_t *,0,NULL
-flags,C_STR,char *,0,""
-freqfrom,C_STR,char *,0,"Freq Processor"
-freqsubj,C_STR,char *,0,"File request report"
-freqtime,C_STR,char *,0,NULL
-history,C_PATH,char *,0,NULL
-holdonnodial,C_INT,int,0,"0"
-holdonsuccess,C_INT,int,0,"0"
-holdout,C_YESNO,int,0,"no"
-hrxwin,C_INT,int,0,"0"
-hstimeout,C_INT,int,0,"60"
-htxwin,C_INT,int,0,"0"
-ignorenrq,C_YESNO,int,0,"no"
-immonflavors,C_STR,char *,0,"CI"
-inbound,C_PATH,char *,1,NULL
-jrxwin,C_INT,int,0,"0"
-jtxwin,C_INT,int,0,"0"
-killbadpkt,C_YESNO,int,0,"no"
-localcp,C_PATH,char *,0,"none"
-lockdir,C_PATH,char *,0,"/tmp"
-log,C_PATH,char *,1,NULL
-loglevels,C_STR,char *,0,""
-longboxpath,C_PATH,char *,0,NULL
-longrescan,C_INT,int,0,"0"
-mailonly,C_STR,char *,0,NULL
-mapin,C_STR,char *,0,NULL
-mapout,C_STR,char *,0,NULL
-mappath,C_STRL,slist_t *,0,NULL
-masterlog,C_PATH,char *,3,NULL
-max_fails,C_INT,int,0,"20"
-maxrings,C_INT,int,0,"0"
-maxsession,C_INT,int,0,"0"
-mincpsdelay,C_INT,int,0,"10"
-mincpsin,C_INT,int,0,"0"
-mincpsout,C_INT,int,0,"0"
-minspeed,C_INT,int,0,"0"
-modemalive,C_STR,char *,0,"AT|"
-modembusy,C_STRL,slist_t *,0,NULL
-modemconnect,C_STRL,slist_t *,0,NULL
-modemerror,C_STRL,slist_t *,0,NULL
-modemhangup,C_STRL,slist_t *,0,NULL
-modemnodial,C_STRL,slist_t *,0,NULL
-modemok,C_STRL,slist_t *,0,NULL
-modemreset,C_STRL,slist_t *,0,NULL
-modemringing,C_STR,char *,0,"RINGING"
-modemstat,C_STRL,slist_t *,0,NULL
-needalllisted,C_YESNO,int,0,"no"
-nlpath,C_PATH,char *,3,NULL
-nodelist,C_STRL,slist_t *,3,NULL
-nodial,C_PATH,char *,0,NULL
-osname,C_STR,char *,0,NULL
-password,C_ADRSTRL,faslist_t *,0,NULL
-perlfile,C_PATH,char *,2,NULL
-phone,C_STR,char *,0,""
-phonetr,C_STRL,slist_t *,0,NULL
-pidfile,C_PATH,char *,3,NULL
-place,C_STR,char *,0,""
-pollflavor,C_STR,char *,0,"N"
-port,C_STRL,slist_t *,0,NULL
-progname,C_STR,char *,0,NULL
-protorder,C_STR,char *,0,"JHZ1C"
-proxy,C_STR,char *,0,NULL
-qstoutbound,C_PATH,char *,2,NULL
-realmincps,C_YESNO,int,0,"yes"
-recodepkts,C_YESNO,int,0,"yes"
-remotecp,C_PATH,char *,0,"none"
-rescanperiod,C_INT,int,0,"300"
-rmboxes,C_YESNO,int,0,"no"
-rootdir,C_PATH,char *,2,NULL
-runoncall,C_STR,char *,0,NULL
-runonchat,C_STR,char *,0,NULL
-runonemsi,C_STR,char *,0,NULL
-sendonly,C_YESNO,int,0,"no"
-server,C_STR,char *,2,NULL
-serverpwd,C_STR,char *,0,NULL
-showintro,C_YESNO,int,0,"yes"
-showpkt,C_YESNO,int,0,"no"
-socks,C_STR,char *,0,NULL
-speed,C_INT,int,0,"300"
-srifrp,C_PATH,char *,0,NULL
-standardemsi,C_YESNO,int,0,"yes"
-station,C_STR,char *,0,""
-subst,C_ADRSTRL,faslist_t *,0,NULL
-sysop,C_STR,char *,0,""
-translatesubst,C_YESNO,int,0,"no"
-useproctitle,C_YESNO,int,0,"yes"
-version,C_STR,char *,0,NULL
-waitcarrier,C_INT,int,0,"60"
-waithrq,C_INT,int,0,"60"
-waitreset,C_INT,int,0,"10"
-worktime,C_STR,char *,0,""
-zmh,C_STR,char *,0,NULL
-zrxwin,C_INT,int,0,"0"
-ztxwin,C_INT,int,0,"0"
+address,C_ADDRL,1,NULL
+aftermail,C_STR,0,NULL
+aftersession,C_STR,0,NULL
+alwayskillfiles,C_YESNO,0,"no"
+alwaysoverwrite,C_STRL,0,NULL
+asooutbound,C_PATH,2,NULL
+autohold,C_STRL,0,NULL
+autoskip,C_STRL,0,NULL
+autosuspend,C_STRL,0,NULL
+autoticskip,C_YESNO,0,"no"
+binkpopt,C_STR,0,"MB"
+bsooutbound,C_PATH,2,NULL
+callonflavors,C_STR,0,"NDCIR"
+cancall,C_STR,0,"CM"
+chathallostr,C_STR,0,"\n * Hello %s!\n"
+chatlog,C_PATH,0,NULL
+chatlognetmail,C_YESNO,0,"no"
+chattoemail,C_STR,0,NULL
+clearundial,C_INT,0,"0"
+defboxflv,C_STR,0,"H"
+defperm,C_OCT,0,"644"
+dialdelay,C_INT,0,"60"
+dialdelta,C_INT,0,"0"
+dialprefix,C_STR,0,"ATD"
+dialsuffix,C_STR,0,"|"
+dirperm,C_OCT,0,"755"
+domain,C_STR,0,"fidonet.org"
+emsifreqtime,C_STR,0,NULL
+emsilog,C_PATH,0,NULL
+estimatedtime,C_YESNO,0,"no"
+extrp,C_STR,0,NULL
+failpolls,C_YESNO,0,"yes"
+fails_hold_div,C_INT,0,"0"
+fails_hold_time,C_INT,0,"0"
+filebox,C_ADRSTRL,0,NULL
+flags,C_STR,0,""
+freqfrom,C_STR,0,"Freq Processor"
+freqsubj,C_STR,0,"File request report"
+freqtime,C_STR,0,NULL
+history,C_PATH,0,NULL
+holdonnodial,C_INT,0,"0"
+holdonsuccess,C_INT,0,"0"
+holdout,C_YESNO,0,"no"
+hrxwin,C_INT,0,"0"
+hstimeout,C_INT,0,"60"
+htxwin,C_INT,0,"0"
+ignorenrq,C_YESNO,0,"no"
+immonflavors,C_STR,0,"CI"
+inbound,C_PATH,1,NULL
+jrxwin,C_INT,0,"0"
+jtxwin,C_INT,0,"0"
+killbadpkt,C_YESNO,0,"no"
+localcp,C_PATH,0,"none"
+lockdir,C_PATH,0,"/tmp"
+log,C_PATH,1,NULL
+loglevels,C_STR,0,""
+longboxpath,C_PATH,0,NULL
+longrescan,C_INT,0,"0"
+mailonly,C_STR,0,NULL
+mapin,C_STR,0,NULL
+mapout,C_STR,0,NULL
+mappath,C_STRL,0,NULL
+masterlog,C_PATH,3,NULL
+max_fails,C_INT,0,"20"
+maxrings,C_INT,0,"0"
+maxsession,C_INT,0,"0"
+mincpsdelay,C_INT,0,"10"
+mincpsin,C_INT,0,"0"
+mincpsout,C_INT,0,"0"
+minspeed,C_INT,0,"0"
+modemalive,C_STR,0,"AT|"
+modembusy,C_STRL,0,NULL
+modemconnect,C_STRL,0,NULL
+modemerror,C_STRL,0,NULL
+modemhangup,C_STRL,0,NULL
+modemnodial,C_STRL,0,NULL
+modemok,C_STRL,0,NULL
+modemreset,C_STRL,0,NULL
+modemringing,C_STR,0,"RINGING"
+modemstat,C_STRL,0,NULL
+needalllisted,C_YESNO,0,"no"
+nlpath,C_PATH,3,NULL
+nodelist,C_STRL,3,NULL
+nodial,C_PATH,0,NULL
+osname,C_STR,0,NULL
+password,C_ADRSTRL,0,NULL
+perlfile,C_PATH,2,NULL
+phone,C_STR,0,""
+phonetr,C_STRL,0,NULL
+pidfile,C_PATH,3,NULL
+place,C_STR,0,""
+pollflavor,C_STR,0,"N"
+port,C_STRL,0,NULL
+progname,C_STR,0,NULL
+protorder,C_STR,0,"JHZ1C"
+proxy,C_STR,0,NULL
+qstoutbound,C_PATH,2,NULL
+realmincps,C_YESNO,0,"yes"
+recodepkts,C_YESNO,0,"yes"
+remotecp,C_PATH,0,"none"
+rescanperiod,C_INT,0,"300"
+rmboxes,C_YESNO,0,"no"
+rootdir,C_PATH,2,NULL
+runoncall,C_STR,0,NULL
+runonchat,C_STR,0,NULL
+runonemsi,C_STR,0,NULL
+sendonly,C_YESNO,0,"no"
+server,C_STR,2,NULL
+serverpwd,C_STR,0,NULL
+showintro,C_YESNO,0,"yes"
+showpkt,C_YESNO,0,"no"
+socks,C_STR,0,NULL
+speed,C_INT,0,"300"
+srifrp,C_PATH,0,NULL
+standardemsi,C_YESNO,0,"yes"
+station,C_STR,0,""
+subst,C_ADRSTRL,0,NULL
+sysop,C_STR,0,""
+translatesubst,C_YESNO,0,"no"
+useproctitle,C_YESNO,0,"yes"
+version,C_STR,0,NULL
+waitcarrier,C_INT,0,"60"
+waithrq,C_INT,0,"60"
+waitreset,C_INT,0,"10"
+worktime,C_STR,0,""
+zmh,C_STR,0,NULL
+zrxwin,C_INT,0,"0"
+ztxwin,C_INT,0,"0"
