@@ -1,3 +1,10 @@
+2004-06-22 12:28  sisoft
+
+	* src/: config.c, flagexp.y, perl.c, qconf.x, tty.c, tty.h:
+
+	check for some keywords not placed inside if-expressions.
+	fix chat with modem.
+
 2004-06-21 01:34  sisoft
 
 	* src/flagexp.y:
